fixed background image on ios

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -5,6 +5,7 @@
 	width: 100%;
 	background-color: gray;
 	background: url(../assets/hero.jpg) no-repeat top center fixed;
+	background-attachment: scroll;
 	background-size: cover;
 
 	display: flex;
@@ -81,6 +82,7 @@
 	width: 100%;
 	background-color: gray;
 	background: url(../assets/bottom-cta.jpg) no-repeat top center fixed;
+	background-attachment: scroll;
 	background-size: cover;
 
 	display: flex;
